# devcore

./: .gitignore  Cargo.toml  LICENSE  README.md  devcore-0.1.0.tgz  install.js  package.json
.cargo/: config.toml
.devcore/: devcore.db
.github/workflows/: ci.yml
crates/academic/: Cargo.toml
crates/academic/src/: assignment.rs  calendar.rs  course.rs  grade.rs  lib.rs  research.rs  semester.rs
crates/codetrail/: Cargo.toml  build.rs
crates/codetrail/man/: codetrail.1
crates/codetrail/src/: main.rs
crates/codetrail/tests/: integration_test.rs
crates/core/: Cargo.toml
crates/core/benches/: blast_radius_bench.rs
crates/core/src/: ai_detector.rs  blast_radius.rs  config.rs  error.rs  git_analyzer.rs  lib.rs  models.rs  storage.rs
crates/core/tests/: ai_detector_test.rs  blast_radius_test.rs  storage_test.rs
crates/devpulse/: Cargo.toml
crates/devpulse/man/: devpulse.1
crates/devpulse/src/: main.rs
crates/devpulse/src/monitor/: metrics.rs  mod.rs  scanner.rs  weekly.rs
crates/devpulse/src/tui/: app.rs  dashboard.rs  mod.rs
crates/devpulse/tests/: integration_test.rs
crates/shipforge/: Cargo.toml
crates/shipforge/man/: shipforge.1
crates/shipforge/src/: main.rs
crates/shipforge/tests/: integration_test.rs
crates/web/api/: Cargo.toml
crates/web/api/src/: main.rs
crates/web/ui/: package-lock.json  package.json
crates/web/ui/src/app/: globals.css  layout.tsx
crates/web/ui/src/app/activity/: page.tsx
crates/web/ui/src/app/analytics/: page.tsx
crates/web/ui/src/app/calendar/: page.tsx
crates/web/ui/src/app/courses/: page.tsx
crates/web/ui/src/app/dashboard/: page.tsx
crates/web/ui/src/app/dev/: page.tsx
crates/web/ui/src/app/research/: page.tsx
crates/web/ui/src/app/semester/: page.tsx
crates/web/ui/src/components/: sidebar.tsx
crates/web/ui/src/lib/: api.ts
scripts/: postinstall.js
