[package]
name = "codetrail"
version.workspace = true
edition.workspace = true

[[bin]]
name = "codetrail"
path = "src/main.rs"

[dependencies]
devcore-core = { path = "../core" }
clap.workspace = true
serde.workspace = true
serde_json.workspace = true
chrono.workspace = true
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
