[package]
name = "devcore-core"
version.workspace = true
edition.workspace = true

[dependencies]
git2.workspace = true
rusqlite.workspace = true
serde.workspace = true
serde_json.workspace = true
chrono.workspace = true
uuid.workspace = true
sha2.workspace = true
walkdir.workspace = true
regex.workspace = true
once_cell.workspace = true
thiserror.workspace = true
toml.workspace = true

[dev-dependencies]
tempfile = "3"
criterion.workspace = true

[[bench]]
name = "blast_radius_bench"
harness = false
