[package]
name = "devpulse"
version.workspace = true
edition.workspace = true

[[bin]]
name = "devpulse"
path = "src/main.rs"

[dependencies]
devcore-core = { path = "../core" }
clap.workspace = true
serde.workspace = true
serde_json.workspace = true
chrono.workspace = true
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
tokio.workspace = true
