[package]
name = "devpulse"
version.workspace = true
edition.workspace = true

[[bin]]
name = "devpulse"
path = "src/main.rs"

[dependencies]
devcore-core = { path = "../core" }
uuid.workspace = true
clap.workspace = true
serde.workspace = true
serde_json.workspace = true
chrono.workspace = true
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
colored.workspace = true
comfy-table.workspace = true
indicatif.workspace = true
inquire.workspace = true
ratatui = "0.29"
crossterm = { version = "0.28", features = ["event-stream"] }

[dev-dependencies]
tempfile = "3"
