[package]
name = "shipforge"
version.workspace = true
edition.workspace = true

[[bin]]
name = "shipforge"
path = "src/main.rs"

[dependencies]
devcore-core = { path = "../core" }
git2.workspace = true
uuid.workspace = true
clap.workspace = true
serde.workspace = true
serde_json.workspace = true
chrono.workspace = true
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
