[package]
name = "devcore-api"
version.workspace = true
edition.workspace = true

[[bin]]
name = "devcore-api"
path = "src/main.rs"

[dependencies]
devcore-core = { path = "../../core" }
devcore-academic = { path = "../../academic" }
axum = "0.7"
tower-http = { version = "0.5", features = ["cors", "fs"] }
serde.workspace = true
serde_json.workspace = true
chrono.workspace = true
anyhow.workspace = true
tokio = { version = "1", features = ["full"] }
tracing.workspace = true
tracing-subscriber.workspace = true
